Update execution counts and adjust raw query for encrypted data display in ORM notebook

--- a/notebooks/orm_postgres_pubkey_encryption.ipynb
+++ b/notebooks/orm_postgres_pubkey_encryption.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f0a432d0",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "5d05289e",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "1b7b89bc",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "4131e57e",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -275,15 +275,15 @@
        "      <td>1</td>\n",
        "      <td>สมชาย ใจดี</td>\n",
        "      <td>1101700200011</td>\n",
-       "      <td>c1c04b03dd083ff1f431783c0107f8d82162cc851ce37c...</td>\n",
-       "      <td>334</td>\n",
+       "      <td>c1c04c0302919295482f526201080085f3e15e2b029db8...</td>\n",
+       "      <td>335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>สมหญิง แข็งแรง</td>\n",
        "      <td>1101700200022</td>\n",
-       "      <td>c1c04c03dd083ff1f431783c0107fe3777c7168353812a...</td>\n",
+       "      <td>c1c04c0302919295482f52620107fe243682d14df9345d...</td>\n",
        "      <td>335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -291,7 +291,7 @@
        "      <td>3</td>\n",
        "      <td>สายฝน สายชล</td>\n",
        "      <td>1101700200033</td>\n",
-       "      <td>c1c04c03dd083ff1f431783c0107fe3ecd8e62ff15e4dc...</td>\n",
+       "      <td>c1c04c0302919295482f52620107fe29aeecc2e94f58b3...</td>\n",
        "      <td>335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -305,34 +305,134 @@
        "2   3     สายฝน สายชล         1101700200033   \n",
        "\n",
        "                                              ct_hex  ct_bytes  \n",
-       "0  c1c04b03dd083ff1f431783c0107f8d82162cc851ce37c...       334  \n",
-       "1  c1c04c03dd083ff1f431783c0107fe3777c7168353812a...       335  \n",
-       "2  c1c04c03dd083ff1f431783c0107fe3ecd8e62ff15e4dc...       335  "
+       "0  c1c04c0302919295482f526201080085f3e15e2b029db8...       335  \n",
+       "1  c1c04c0302919295482f52620107fe243682d14df9345d...       335  \n",
+       "2  c1c04c0302919295482f52620107fe29aeecc2e94f58b3...       335  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ใช้ SQL ดิบเพื่อหลีกเลี่ยง column_expression ของ TypeDecorator และดู ciphertext จริง\n",
+    "with Session(engine) as session:\n",
+    "    result = session.execute(\n",
+    "        select(\n",
+    "            CustomerSecretPubORM.id,\n",
+    "            CustomerSecretPubORM.full_name,\n",
+    "            CustomerSecretPubORM.__table__.c.national_id.label('national_id_encrypted'),\n",
+    "            func.encode(CustomerSecretPubORM.__table__.c.national_id, 'hex').label('ct_hex'),\n",
+    "            func.octet_length(CustomerSecretPubORM.__table__.c.national_id).label('ct_bytes')\n",
+    "        ).order_by(CustomerSecretPubORM.id)\n",
+    "    ).all()\n",
+    "pd.DataFrame(result, columns=['id', 'full_name', 'national_id_encrypted', 'ct_hex', 'ct_bytes'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ca0e70",
+   "metadata": {},
+   "source": [
+    "## ทำการ Raw Query เพื่อแสดงข้อมูลที่เข้ารหัส"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44e2b80d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>national_id</th>\n",
+       "      <th>encrypted_bytes</th>\n",
+       "      <th>is_pgp_format</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>สมชาย ใจดี</td>\n",
+       "      <td>b\"\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x08\\x0...</td>\n",
+       "      <td>335</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>สมหญิง แข็งแรง</td>\n",
+       "      <td>b'\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x07\\xf...</td>\n",
+       "      <td>335</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>สายฝน สายชล</td>\n",
+       "      <td>b\"\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x07\\xf...</td>\n",
+       "      <td>335</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id       full_name                                        national_id  \\\n",
+       "0   1      สมชาย ใจดี  b\"\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x08\\x0...   \n",
+       "1   2  สมหญิง แข็งแรง  b'\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x07\\xf...   \n",
+       "2   3     สายฝน สายชล  b\"\\xc1\\xc0L\\x03\\x02\\x91\\x92\\x95H/Rb\\x01\\x07\\xf...   \n",
+       "\n",
+       "   encrypted_bytes  is_pgp_format  \n",
+       "0              335          False  \n",
+       "1              335          False  \n",
+       "2              335          False  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "with engine.begin() as conn:\n",
-    "    rows = conn.execute(\n",
-    "        text(\n",
-    "            \"\"\"\n",
-    "            SELECT\n",
-    "                id,\n",
-    "                full_name,\n",
-    "                national_id AS national_id_encrypted,\n",
-    "                encode(national_id, 'hex') AS ct_hex,\n",
-    "                octet_length(national_id) AS ct_bytes\n",
-    "            FROM customer_secret_pub_orm\n",
-    "            ORDER BY id\n",
-    "            \"\"\"\n",
-    "        )\n",
-    "    ).fetchall()\n",
-    "pd.DataFrame(rows, columns=['id', 'full_name', 'national_id_encrypted', 'ct_hex', 'ct_bytes'])\n"
+    "    # ดึงข้อมูลแบบ raw โดยไม่ถอดรหัส\n",
+    "    result = conn.execute(text(\"\"\"\n",
+    "    SELECT \n",
+    "        id,\n",
+    "        full_name,\n",
+    "        national_id as national_id,\n",
+    "        octet_length(national_id) as encrypted_bytes,\n",
+    "        (national_id::text SIMILAR TO '%-----BEGIN PGP MESSAGE%'::text) as is_pgp_format\n",
+    "    FROM customer_secret_pub_orm\n",
+    "    ORDER BY id;\n",
+    "    \"\"\")).fetchall()\n",
+    "\n",
+    "df_encrypted = pd.DataFrame(result, columns=['id', 'full_name', 'national_id', 'encrypted_bytes', 'is_pgp_format'])\n",
+    "df_encrypted"
    ]
   },
   {
@@ -344,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +503,7 @@
        "2   3     สายฝน สายชล  1101700200033"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
