Add flow diagram and explanation for Hybrid Encryption process in the demo notebook

--- a/notebooks/hybrid_encryption_demo.ipynb
+++ b/notebooks/hybrid_encryption_demo.ipynb
@@ -45,6 +45,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aab2c99d",
+   "metadata": {},
+   "source": [
+    "## Flow Diagram - กระบวนการ Hybrid Encryption\n",
+    "\n",
+    "```mermaid\n",
+    "flowchart TD\n",
+    "    A[\"📄 เอกสารต้นฉบับ\"] --> B[\"🔑 สร้าง Session Key<br/>AES 256-bit สุ่ม\"]\n",
+    "    B --> C[\"🔐 เข้ารหัสข้อมูล<br/>pgp_sym_encrypt<br/>ด้วย Session Key<br/>Symmetric AES\"]\n",
+    "    \n",
+    "    C --> D[\"📊 เก็บ Encrypted Content<br/>ในตาราง sensitive_documents\"]\n",
+    "    \n",
+    "    B --> E[\"🔓 สำหรับแต่ละผู้ใช้<br/>ที่มีสิทธิ์\"]\n",
+    "    E --> F[\"🔑 ดึง Public Key<br/>ของผู้ใช้\"]\n",
+    "    F --> G[\"🔒 เข้ารหัส Session Key<br/>RSA Encryption<br/>ด้วย Public Key<br/>Asymmetric RSA\"]\n",
+    "    G --> H[\"📋 เก็บ Encrypted Session Key<br/>ในตาราง document_access\"]\n",
+    "    \n",
+    "    I[\"🔓 ผู้ใช้ที่ต้องการอ่าน\"] --> J[\"🔍 ดึง Encrypted Session Key<br/>จาก document_access\"]\n",
+    "    J --> K[\"🔑 ใช้ Private Key<br/>ถอดรหัส Session Key<br/>RSA Decryption\"]\n",
+    "    K --> L[\"🔓 ใช้ Session Key<br/>ถอดรหัส Encrypted Content<br/>pgp_sym_decrypt\"]\n",
+    "    L --> M[\"✅ อ่านข้อมูลต้นฉบับ\"]\n",
+    "    \n",
+    "    style A fill:#e1f5ff\n",
+    "    style B fill:#fff3e0\n",
+    "    style C fill:#f3e5f5\n",
+    "    style D fill:#e8f5e9\n",
+    "    style E fill:#fce4ec\n",
+    "    style F fill:#fff3e0\n",
+    "    style G fill:#f3e5f5\n",
+    "    style H fill:#e8f5e9\n",
+    "    style I fill:#ffe0b2\n",
+    "    style J fill:#e1f5ff\n",
+    "    style K fill:#fff3e0\n",
+    "    style L fill:#f3e5f5\n",
+    "    style M fill:#c8e6c9\n",
+    "```\n",
+    "\n",
+    "### คำอธิบาย:\n",
+    "- **ส่วนบน (สีส้มและม่วง)**: ขั้นตอนการเข้ารหัส - สร้าง session key แบบสุ่มและใช้เข้ารหัสข้อมูล\n",
+    "- **ส่วนกลาง (สีชมพู)**: สำหรับแต่ละผู้ใช้ที่มีสิทธิ์ - เข้ารหัส session key ด้วย public key ของแต่ละคน\n",
+    "- **ส่วนล่าง (สีเหลืองและฟ้า)**: ขั้นตอนการถอดรหัสของผู้ใช้ - ถอด session key จากนั้นถอดข้อมูลจริง"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d1109bbb",
